# analyzer

./: .gitignore  CMakeLists.txt  README.md
include/: ai_detector.hpp  context_analyzer.hpp  derivation_analyzer.hpp  utils.hpp
scripts/: test_descriptors.py  test_mser.py  test_mser_shape.py
src/: ai_detector.cpp  context_analyzer.cpp  derivation_analyzer.cpp  main.cpp  utils.cpp
